subtitle display mode

--- a/Echo/App.config
+++ b/Echo/App.config
@@ -49,6 +49,9 @@
             <setting name="IsEchoAPIEnabled" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="SubtitleDisplayMode" serializeAs="String">
+                <value>Hover</value>
+            </setting>
         </Echo.Properties.Settings>
     </userSettings>
 </configuration>
