--- a/Echo/App.config
+++ b/Echo/App.config
@@ -52,6 +52,18 @@
             <setting name="SubtitleDisplayMode" serializeAs="String">
                 <value>Hover</value>
             </setting>
+            <setting name="OxfordApiKey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="OpenAIApiKey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IsUseThirdPartyAPI" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="IsUseEchoAPI" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Echo.Properties.Settings>
     </userSettings>
 </configuration>
