--- a/Echo/Properties/Settings.settings
+++ b/Echo/Properties/Settings.settings
@@ -47,5 +47,17 @@
     <Setting Name="SubtitleDisplayMode" Type="System.String" Scope="User">
       <Value Profile="(Default)">Hover</Value>
     </Setting>
+    <Setting Name="OxfordApiKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="OpenAIApiKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="IsUseThirdPartyAPI" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="IsUseEchoAPI" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
