--- a/Echo/App.config
+++ b/Echo/App.config
@@ -64,6 +64,9 @@
             <setting name="IsUseEchoAPI" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="OxfordApiId" serializeAs="String">
+                <value />
+            </setting>
         </Echo.Properties.Settings>
     </userSettings>
 </configuration>
