--- a/Echo/Properties/Settings.settings
+++ b/Echo/Properties/Settings.settings
@@ -59,5 +59,8 @@
     <Setting Name="IsUseEchoAPI" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="OxfordApiId" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
