--- a/Echo/App.config
+++ b/Echo/App.config
@@ -23,7 +23,7 @@
                 <value>0.5</value>
             </setting>
             <setting name="SoftwareLanguage" serializeAs="String">
-                <value>zh-Hans</value>
+                <value>en</value>
             </setting>
             <setting name="AspectRatio" serializeAs="String">
                 <value>Default</value>
